shorts-maker-v2/result2.txt
============================= test session starts =============================
platform win32 -- Python 3.14.2, pytest-9.0.2, pluggy-1.6.0
rootdir: C:\Users\박주호\Desktop\Vibe coding\shorts-maker-v2
configfile: pytest.ini (WARNING: ignoring pytest config in pyproject.toml!)
plugins: anyio-4.12.1, langsmith-0.6.9, asyncio-1.3.0, cov-7.0.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 0 items / 1 error

=================================== ERRORS ====================================
_______________ ERROR collecting tests/unit/test_script_step.py _______________
..\..\..\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\..\..\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\..\AppData\Local\Python\pythoncore-3.14-64\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
..\..\..\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\unit\test_script_step.py:5: in <module>
    from shorts_maker_v2.pipeline.script_step import ScriptStep
src\shorts_maker_v2\pipeline\__init__.py:2: in <module>
    from shorts_maker_v2.pipeline.orchestrator import PipelineOrchestrator
src\shorts_maker_v2\pipeline\orchestrator.py:27: in <module>
    from shorts_maker_v2.pipeline.script_step import ScriptStep, TopicUnsuitableError
E     File "C:\Users\박주호\Desktop\Vibe coding\shorts-maker-v2\src\shorts_maker_v2\pipeline\script_step.py", line 150
E       TONE_PRESETS: list[tuple[str, str]] = [
E   IndentationError: unexpected indent
============================== warnings summary ===============================
..\..\..\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\openai\_compat.py:48
  C:\Users\박주호\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\openai\_compat.py:48: UserWarning: Core Pydantic V1 functionality isn't compatible with Python 3.14 or greater.
    from pydantic.v1.typing import (

..\..\..\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\google\genai\types.py:43
  C:\Users\박주호\AppData\Local\Python\pythoncore-3.14-64\Lib\site-packages\google\genai\types.py:43: DeprecationWarning: '_UnionGenericAlias' is deprecated and slated for removal in Python 3.17
    VersionedUnionType = Union[builtin_types.UnionType, _UnionGenericAlias]

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ===========================
ERROR tests/unit/test_script_step.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
======================== 2 warnings, 1 error in 3.06s =========================
